force-app/main/default/objects/Salesforce_Career_Path__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <relationshipLabel>Salesforce Career Path</relationshipLabel>
    <relationshipName>Salesforce_Career_Path</relationshipName>
    <type>Lookup</type>
</CustomField>