force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Apex Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Architect Chief</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Lightning Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Manager</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Senior Apex Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Senior Lightning Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Senior Platform Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Team Lead</fullName>
            </value>
            <value>
                <fullName>Salesforce Technical Architect Lead</fullName>
            </value>
            <value>
                <fullName>Salesforce Trainee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>