force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_Communication__c.field-meta.xml
<CustomField>
    <fullName>Role_Communication__c</fullName>
    <label>Nivel de Comunicación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>