force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Role_Description__c</fullName>
    <label>Role Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>