force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_Functionalknowledge__c.field-meta.xml
<CustomField>
    <fullName>Role_Functionalknowledge__c</fullName>
    <label>Conocimiento Funcional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>