force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_MentoringRequiered__c.field-meta.xml
<CustomField>
    <fullName>Role_MentoringRequiered__c</fullName>
    <label>Requiere Mentoring/Actitud</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>