force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Role_Prerequisites__c</fullName>
    <label>Requisitos del Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>