force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_Softskills__c.field-meta.xml
<CustomField>
    <fullName>Role_Softskills__c</fullName>
    <label>Soft Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>