force-app/main/default/objects/Salesforce_Career_Path__c/fields/Role_Technicalknowledge__c.field-meta.xml
<CustomField>
    <fullName>Role_Technicalknowledge__c</fullName>
    <label>Conocimiento Técnico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>