force-app/main/default/objects/Salesforce_Career_Path__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Required__c</columns>
    <columns>Possible_Next_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>